[package]
name = "wayland_autoclicker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
libc = "0.2"
nix = { version = "0.30.1", features = ["fs"] }
signal-hook = "0.3"
